# chartreuse

./: .dockerignore  .flake8  .gitignore  .gitlab-ci-common-libraries.yml  .gitlab-ci.yml  .noseids  CHANGELOG.md  README.md  SECURITY.md  VERSION  customResourceDescription-expecteddeploymentscales.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup.txt
.github/workflows/: black.yml  codeql-analysis.yml  python-publish.yml  python-test.yml
doc/: chartreuse_sd.xml
docs/: multi-database.md
example/: Dockerfile  Dockerfile-dev  Dockerfile-dev-auth  multi-database-config.yaml  simple-config.yaml
example/alembic/: alembic.ini  env.py
example/alembic/clickhouse/: env.py  script.py.mako
example/alembic/clickhouse/versions/: 20250606-inital.py
example/alembic/postgresl/: env.py
example/alembic/versions/: init.py
example/helm-chart/my-example-chart/: Chart.yaml  values.yaml
example/helm-chart/my-example-chart/charts/: chartreuse-5.0.3.tgz
example/helm-chart/my-example-chart/templates/: _helpers.tpl  deployment.yaml  hpa.yaml
helm-chart/chartreuse/: Chart.yaml  chartreuse-0.1.2.tgz  chartreuse-0.2.1.tgz  values.yaml
helm-chart/chartreuse/templates/: _helpers.tpl  confimap-ephemeral.yaml  confimap.yaml  job-post-rollback.yaml  job-post-upgrade.yaml  job-pre-upgrade.yaml  job.yaml  role-ephemeral.yaml  role.yaml  secret-ephemeral.yaml  secret.yaml  serviceaccount.yaml
scripts/: validate_config.py
src/chartreuse/: __init__.py  chartreuse.py  chartreuse_migrate.py  chartreuse_upgrade.py  config_loader.py  postdeployment.py  postrollback.py  postupgrade.py  predeployment.py  utils.py
src/chartreuse/tests/: conftest.py  test_alembic.py  test_dummy.py  test_eslembic.py  utils_tests.py
src/chartreuse/tests/e2e_tests/: CustomResourceDefinition-expecteddeploymentscales.yaml  Dockerfile  conftest.py  test_blackbox.py  test_e2e.py  test_integration.py
src/chartreuse/tests/e2e_tests/helm_chart/my-test-chart/: Chart.yaml  values.yaml
src/chartreuse/tests/e2e_tests/helm_chart/my-test-chart/templates/: _helpers.tpl  deployment.yaml  expecteddeploymentscale.yaml
src/chartreuse/tests/e2e_tests/sample_alembic/: env.py
src/chartreuse/tests/e2e_tests/sample_alembic/versions/: init.py
src/chartreuse/tests/e2e_tests/sample_eslembic/: eslembic.ini  script.py.mako
src/chartreuse/tests/e2e_tests/sample_eslembic/versions/: version-1-0-0.py  version-1-0-1.py
src/chartreuse/tests/unit_tests/: conftest.py  test_alembic.py  test_chartreuse.py  test_chartreuse_upgrade.py  test_chartreuse_upgrade_extended.py  test_config_loader.py  test_eslembic.py  test_patroni_postgresql.py  test_postdeployment.py  test_predeployment.py
src/chartreuse/utils/: __init__.py  alembic_migration_helper.py  chartreuse.py  eslembic_migration_helper.py  helpers.py
