[project]
name = "chartreuse"
description="Helper for Alembic migrations within Kubernetes."
dynamic = ["version"]
readme = "README.md"
authors = [{ name = "wiremind", email = "dev@wiremind.io" }]
license="LGPL-3.0-or-later"
urls = { github = "https://github.com/wiremind/chartreuse"}
scripts = {chartreuse-upgrade = "chartreuse.chartreuse_upgrade:main"}
requires-python = ">=3.11.0"

dependencies = [
  "alembic",
  "psycopg2",
  "wiremind-kubernetes~=7.0",
]

[build-system]
requires = ["setuptools>=71.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
zip-safe = true
[tool.setuptools.dynamic]
version = { file = "VERSION" }
[tool.setuptools.packages.find]
where = ["src"]
exclude = ["*.tests", "*.tests.*", "tests.*", "tests"]

[project.optional-dependencies]
test = [
  "mock",
  "pytest",
  "pytest-mock",
]
mypy = [
  "mypy",
]
dev = [
  "black",
  "flake8",
  "flake8-mutable",
  "pip-tools",

  "mock",
  "pytest",
  "pytest-mock",

  "mypy"
]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
line_length = 120

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
no_implicit_optional = true
show_error_codes = true
files = [ "src", "example/alembic"]

[tool.pytest.ini_options]
log_level = "INFO"
# Deterministic ordering for tests; useful for pytest-xdist.
env = ["PYTHONHASHSEED=0"]
filterwarnings = ["ignore::pytest.PytestUnknownMarkWarning"]