[options]
python_requires = >= 3.7

[flake8]
max-line-length = 120
# Enable flake8-mutable
enable-extensions = M511
# W503 line break before binary operator. Black causes this error
# E231 missing whitespace after ','. Black causes this error but seems to be right (see pep8)
# E501 line too long
ignore = W503, E231, E501

[mypy]
python_version = 3.7
ignore_missing_imports = True

[tool:pytest]
mock_use_standalone_module = true
# Uncomment those if you want to have live logging. Otherwise, logs are displayed only in the end but errors are better handled.
log_cli = True
log_cli_level = INFO
